corrected an alignment bug in parallax section

--- a/src/pages/About/Testimonials/Testimonials.css
+++ b/src/pages/About/Testimonials/Testimonials.css
@@ -53,7 +53,7 @@
 
 .testimonials-banner {
     padding:0;
-    margin:0
+    margin:0;
 }
 
 .testimonials-quote-text {
@@ -73,8 +73,10 @@
     display: flex;
     flex-direction: row;
     align-self: center;
-    margin: 5px;
     max-width: 1500px;
+    align-self: center;
+    align-content: center;
+    justify-content: center;
     /* height: 600px; */
 }
 
@@ -165,6 +167,7 @@
       height: auto;
       border: none;
       background-color: rgb(30,30,30);
+      margin: 5px;
 
     }
 
